# mnist-classifier

./: .gitignore  README.md  evaluate.py  mnist.py  pyproject.toml  requirements.txt  setup.py
src/: config.py  utils.py
src/data/: dataset.py  make_dataset.py
src/models/: classifier.py  test.py  train.py
